# AudioPlayer-rs

./: .gitignore  Cargo.toml
src/: event.rs  lib.rs  main.rs  play_handler.rs
src/gui/: file_dialog.rs  handler.rs  mod.rs
src/music/: flac_music.rs  mod.rs  mpeg_music.rs  music.rs  ncm_music.rs  wav_music.rs
src/play_handler/: mod.rs
src/player/: audio.rs  mod.rs  play_handler.rs
