[package]
name = "audio_player"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"

rodio = "0.19.0"
id3 = "1.14.0"
egui = "0.28.1"
eframe = "0.28.1"
mpeg-audio-header = "0.0.6"
# music_dump_lib = { git = "https://github.com/chanmaoganda/NcmDumpLib.git" }
music_dump_lib = "0.1.1"
rfd = "0.14.1"
glob = "0.3.1"
env_logger = "0.11.3"
log = "0.4.22"